<resources>
    <string name="app_name">Github User</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="user_name">username</string>
    <string name="user_location">Lokasi</string>
    <string name="text_10">10</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_repository">Repository</string>
    <string name="text_name">Name</string>
    <string name="text_username">\@username</string>
    <string name="text_setting">Setting</string>
    <string name="text_favorite">Favorite</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dark_theme_on">Set theme to dark mode</string>
    <string name="deleted">Removed from favorite</string>
    <string name="added">Added to favorite</string>
</resources>