<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.DetailUserActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_name"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_avatar" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_username"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_10"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/divider_1"
            app:layout_constraintTop_toTopOf="@+id/tv_followers" />

        <TextView
            android:id="@+id/txt_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_following"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_following"
            app:layout_constraintStart_toStartOf="@+id/tv_following"
            app:layout_constraintTop_toBottomOf="@+id/tv_following" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/txt_followers"
            app:layout_constraintEnd_toStartOf="@+id/tv_followers"
            app:layout_constraintTop_toTopOf="@+id/tv_followers" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_10"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_username" />

        <TextView
            android:id="@+id/txt_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/text_followers"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_followers"
            app:layout_constraintStart_toStartOf="@+id/tv_followers"
            app:layout_constraintTop_toBottomOf="@+id/tv_followers" />

        <View
            android:id="@+id/divider_2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:textColor="?attr/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@+id/txt_followers"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintTop_toTopOf="@+id/tv_followers" />

        <TextView
            android:id="@+id/tv_repository"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_10"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/divider_2"
            app:layout_constraintTop_toTopOf="@+id/tv_followers" />

        <TextView
            android:id="@+id/txt_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/text_repository"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_repository"
            app:layout_constraintStart_toStartOf="@+id/tv_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_repository" />

        <ImageView
            android:id="@+id/ic_location"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_repository" />


        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_location"
            app:layout_constraintLeft_toRightOf="@id/ic_location"
            app:layout_constraintTop_toTopOf="@id/ic_location" />


        <ImageView
            android:id="@+id/ic_company"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_company"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_location" />


        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/ic_company"
            app:layout_constraintLeft_toRightOf="@id/ic_company"
            app:layout_constraintTop_toTopOf="@id/ic_company" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_company"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/grey_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_fav"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/grey_header"
            android:src="@drawable/ic_favorite"
            app:borderWidth="0dp"
            app:fabCustomSize="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
